[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://Pics/shop screen.jpg" type="Texture" id=2]
[ext_resource path="res://Pics/1.png" type="Texture" id=3]
[ext_resource path="res://Pics/back button.png" type="Texture" id=4]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="shop screen" type="Sprite" parent="." index="0"]

position = Vector2( 512.905, 298.444 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 8.0
margin_right = 551.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = true
align = 1

[node name="Button3" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 521.0
margin_right = 554.0
margin_bottom = 597.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = true
align = 1

[node name="Button2" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -308.0
margin_top = 21.0
margin_right = -148.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "2"
flat = false
align = 1

[node name="Label2" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 8.0
margin_right = 127.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_top = 7.0
margin_right = 59.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "coins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


